--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -3,4 +3,5 @@
   height: 100%;
   background-image: url("/image/img_background.png");
   background-size: 100% 100%;
+  background: transparent;
 }
