--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -4,4 +4,7 @@
   background-image: url("/image/img_background.png");
   background-size: 100% 100%;
   background: transparent;
+  .app-content {
+    height: calc(100% - 41px);
+  }
 }
