--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -24,7 +24,7 @@
     justify-content: start;
     align-items: center;
     cursor: pointer;
-    position: fixed;
+    position: absolute;
     right: 0;
     bottom: 110px;
     z-index: 1000;
@@ -52,7 +52,7 @@
     width: 100%;
     height: 84px;
     background: #eaedf3;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     left: 0;
     .friendLink {
