--- a/src/components/WinBar/MacOSBar/index.less
+++ b/src/components/WinBar/MacOSBar/index.less
@@ -1,4 +1,4 @@
-.WinBar {
+.MacOSBar {
   width: 100%;
   height: 40px;
   border-bottom: 1px solid #eeeeec;
@@ -56,9 +56,6 @@
     padding: 6px;
     cursor: pointer;
     -webkit-app-region: no-drag;
-    &:not(:last-child) {
-      margin-right: 6px;
-    }
     &:hover {
       background: #e0e0e0;
     }
