--- a/src/pages/confidentiality/index.less
+++ b/src/pages/confidentiality/index.less
@@ -1,16 +1,13 @@
 .confidentiality {
   width: 100%;
   height: 100%;
-  overflow: hidden;
   position: relative;
   .chapterAttention {
-    width: 1000px;
-    margin: 0 auto;
-    margin-top: 20px;
-    margin-bottom: 40px;
+    width: calc(100% - 40px);
+    margin: 20px auto 0;
     padding: 12px 16px;
     box-sizing: border-box;
-    border-radius: 16px;
+    border-radius: 12px;
     background: rgba(255, 255, 255, 1);
     position: relative;
     p:first-child {
@@ -39,7 +36,8 @@
     }
   }
   .chapterPrison {
-    display: block;
-    margin: 0 auto;
+    position: absolute;
+    right: 0;
+    bottom: 60px;
   }
 }
