--- a/src/pages/courseDetail/index.less
+++ b/src/pages/courseDetail/index.less
@@ -1,30 +1,43 @@
 .courseDetail {
   width: 100%;
   height: 100%;
-  overflow: hidden;
   position: relative;
   .container {
-    width: 900px;
+    width: calc(100% - 40px);
     margin: 20px auto 0;
-  }
-  .chapterAttention {
-    color: rgba(10, 7, 8, 0.6);
-    padding: 12px 8px 12px 30px;
-    display: flex;
-    justify-content: start;
-    align-items: end;
-    position: relative;
-    ul {
-      flex: 1;
-      margin-right: 10px;
-      li {
-        list-style-type: disc;
-        line-height: 20px;
+    .playContainer {
+      width: calc(100% - 300px - 20px);
+      margin-right: 20px;
+      overflow: hidden;
+      >div:first-child {
+        min-height: 488px;
+        border-radius: 12px;
+        margin-bottom: 12px;
+        background: #000000;
       }
     }
-    .chapterAttentionImg {
-      width: 72px;
-      height: 76px;
+    .attentionContainer {
+      width: 300px;
+      .chapterAttention {
+        display: flex;
+        justify-content: start;
+        align-items: end;
+        position: relative;
+        color: rgba(10, 7, 8, 0.6);
+        padding: 12px 8px 12px 30px;
+        ul {
+          flex: 1;
+          margin-right: 10px;
+          li {
+            list-style-type: disc;
+            line-height: 20px;
+          }
+        }
+        .chapterAttentionImg {
+          width: 72px;
+          height: 76px;
+        }
+      }
     }
   }
 }
