--- a/src/pages/courseDetail/index.less
+++ b/src/pages/courseDetail/index.less
@@ -38,6 +38,12 @@
           height: 76px;
         }
       }
+      .playBtn {
+        cursor: pointer;
+        &:hover {
+          box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
+        }
+      }
     }
   }
 }
