--- a/src/pages/courseList/index.less
+++ b/src/pages/courseList/index.less
@@ -1,14 +1,12 @@
 .courseList {
   width: 100%;
   height: 100%;
-  overflow: hidden;
   position: relative;
   .courseListContainer {
-    width: 80%;
-    margin: 0 auto;
-    margin-top: 20px;
-    margin-bottom: 100px;
+    width: calc(100% - 40px);
+    margin: 20px auto 0;
     .chapterAttention {
+      width: 100%;
       height: 102px;
       padding: 12px 16px;
       box-sizing: border-box;
