--- a/src/pages/setting/index.less
+++ b/src/pages/setting/index.less
@@ -1,7 +1,7 @@
 .setting {
-  padding: 16px 16px 12px;
-  .adm-list-body {
-    border: 1px solid #ffffff;
-    border-radius: 16px;
-  }
+  width: 100%;
+  height: 100%;
+  position: relative;
+  padding: 20px 20px 0;
+  box-sizing: border-box;
 }
