谷歌地图key添加

--- a/src/pages/courseCatalog/index.less
+++ b/src/pages/courseCatalog/index.less
@@ -1,11 +1,10 @@
 .chapterCatalog {
-  min-height: 100vh;
-  overflow: hidden;
+  width: 100%;
+  height: 100%;
   position: relative;
   .chapterCatalogContainer {
-    width: 80%;
-    margin: 0 auto;
-    margin-top: 20px;
+    width: calc(100% - 40px);
+    margin: 20px auto 0;
     ul.attention {
       margin-left: 20px;
       li {
