--- a/src/pages/courseDetail/index.less
+++ b/src/pages/courseDetail/index.less
@@ -3,17 +3,18 @@
   height: 100%;
   position: relative;
   .container {
-    width: calc(100% - 40px);
-    margin: 20px auto 0;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    box-sizing: border-box;
     .playContainer {
       width: calc(100% - 300px - 20px);
+      height: calc(100% - 100px);
+      background: #000000;
       margin-right: 20px;
-      overflow: hidden;
       >div:first-child {
-        min-height: 488px;
         border-radius: 12px;
         margin-bottom: 12px;
-        background: #000000;
       }
     }
     .attentionContainer {
