--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -51,7 +51,7 @@
   .bahasaindoFooter {
     width: 100%;
     height: 84px;
-    background: #eaedf3;
+    background: #f8f8f7;
     position: absolute;
     bottom: 0;
     left: 0;
