--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -2,7 +2,7 @@
   height: 100%;
   position: relative;
   .loginContain {
-    width: 80%;
+    width: calc(100% - 40px);
     position: absolute;
     top: 20px;
     left: 0; right: 0;
