线路切换功能添加

--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -1,6 +1,12 @@
 .home {
   height: 100%;
   position: relative;
+  .switchLine {
+    width: 100px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+  }
   .homeContainer {
     width: 400px;
     height: 340px;
